Video sequencer stereoscopic strips produce garbage results #71546

Closed
opened 2019-11-13 16:21:26 +01:00 by Olli Rajala · 14 comments

System Information
Operating system: Linux-4.4.0-144-generic-x86_64-with-debian-jessie-sid 64 Bits
Graphics card: GeForce GTX 1070 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 384.183

Blender Version
Broken: version: 2.80 (sub 75), branch: master, commit date: 2019-07-29 14:47, hash: f6cb5f5449
Worked: (optional)

Short description of error
Any type of stereoscopic movie or image strips produces garbage results in the viewer in every stereo view mode. This seems to work in 2.79 but broken in all 2.80, 2.81 and 2.82.

EDIT: just noticed that this issue goes away if the scene resolution matches the input clip's resolution (1280x720 in this case). In 2.79 all non-matching resolutions work too.

Exact steps for others to reproduce the error

  1. enable scene stereoscopy
  2. add the attached top-bottom movie to sequencer and set the strip's source parameters as in the attached image
  3. marvel the results in the preview viewer

Tnx'n'cheers!

stereotest.mov

stereo_garbage.png

**System Information** Operating system: Linux-4.4.0-144-generic-x86_64-with-debian-jessie-sid 64 Bits Graphics card: GeForce GTX 1070 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 384.183 **Blender Version** Broken: version: 2.80 (sub 75), branch: master, commit date: 2019-07-29 14:47, hash: `f6cb5f5449` Worked: (optional) **Short description of error** Any type of stereoscopic movie or image strips produces garbage results in the viewer in every stereo view mode. This seems to work in 2.79 but broken in all 2.80, 2.81 and 2.82. EDIT: just noticed that this issue goes away if the scene resolution matches the input clip's resolution (1280x720 in this case). In 2.79 all non-matching resolutions work too. **Exact steps for others to reproduce the error** 1) enable scene stereoscopy 2) add the attached top-bottom movie to sequencer and set the strip's source parameters as in the attached image 3) marvel the results in the preview viewer Tnx'n'cheers! [stereotest.mov](https://archive.blender.org/developer/F8061298/stereotest.mov) ![stereo_garbage.png](https://archive.blender.org/developer/F8061300/stereo_garbage.png)
Author

Added subscriber: @olliRJL

Added subscriber: @olliRJL

Added subscriber: @dfelinto

Added subscriber: @dfelinto

Please attach a simple small sample file, and a 2.79 .blend where I can see that things work, and open in 2.81 (from daily builds in builder.blender.org) where things fail.

Please attach a simple small sample file, and a 2.79 .blend where I can see that things work, and open in 2.81 (from daily builds in builder.blender.org) where things fail.
Author

Hi Dalai,

I noticed a bit of different behaviour between all 2.79, 2.80 and 2.81 so here are 3 .blends made with each version... and also this table how they behave when opened in other versions.

Create scene in: Sequencer Preview Render Image Render Animation
2.79 OK OK OK
2.80 BAD BAD BAD
2.81 OK BAD BAD
Open made_with_279.blend in: Sequencer Preview Render Image Render Animation
2.79 OK OK OK
2.80 OK BAD BAD
2.81 OK BAD BAD
Open made_with_280.blend in: Sequencer Preview Render Image Render Animation
2.80 BAD BAD BAD
2.81 BAD BAD BAD
Open made_with_281.blend in: Sequencer Preview Render Image Render Animation
2.80 OK BAD BAD
2.81 OK BAD BAD

...and the file:
blender_stereo_test.zip

Cheers!

Hi Dalai, I noticed a bit of different behaviour between all 2.79, 2.80 and 2.81 so here are 3 .blends made with each version... and also this table how they behave when opened in other versions. |Create scene in:| Sequencer Preview| Render Image| Render Animation| | -- | -- | -- | -- | |2.79| OK| OK| OK| |2.80| BAD| BAD| BAD| |2.81| OK| BAD| BAD| |Open made_with_279.blend in:| Sequencer Preview| Render Image| Render Animation| | -- | -- | -- | -- | |2.79| OK| OK| OK| |2.80| OK| BAD| BAD| |2.81| OK| BAD| BAD| |Open made_with_280.blend in:| Sequencer Preview| Render Image| Render Animation| | -- | -- | -- | -- | |2.80| BAD| BAD| BAD| |2.81| BAD| BAD| BAD| |Open made_with_281.blend in: | Sequencer Preview| Render Image| Render Animation| | -- | -- | -- | -- | |2.80| OK| BAD| BAD| |2.81| OK| BAD| BAD| ...and the file: [blender_stereo_test.zip](https://archive.blender.org/developer/F8120304/blender_stereo_test.zip) Cheers!

Added subscriber: @iss

Added subscriber: @iss

This crashes in my case, but I can see where the issue is.

This crashes in my case, but I can see where the issue is.

Added subscriber: @GabrielMontagne

Added subscriber: @GabrielMontagne

I stumbled upon this as well. In my case, when I render a stereo preview of the garbled image I can see that the right channel looks as if the pixels were laid out from wrong dimensions, the left channel looks fine.

Strangely, when I "scrub" by clicking and dragging on the strip, the anaglyph preview looks correct.

I'm attaching a screenshot where you can see on the right the preview of the right channel -- on the left the VSE choking. 2020-01-24-225611_1920x1080_scrot.png

On the second image, the same setup, I'm just holding down the mouse on the VSE strip,
2020-01-24-230457_801x917_scrot.png


I also tried, with the same files, on 2.79 (the last build) and I couldn't reproduce the problem.

I stumbled upon this as well. In my case, when I render a stereo preview of the garbled image I can see that the right channel looks as if the pixels were laid out from wrong dimensions, the left channel looks fine. Strangely, when I "scrub" by clicking and dragging on the strip, the anaglyph preview looks correct. I'm attaching a screenshot where you can see on the right the preview of the right channel -- on the left the VSE choking. ![2020-01-24-225611_1920x1080_scrot.png](https://archive.blender.org/developer/F8300242/2020-01-24-225611_1920x1080_scrot.png) On the second image, the same setup, I'm just holding down the mouse on the VSE strip, ![2020-01-24-230457_801x917_scrot.png](https://archive.blender.org/developer/F8300258/2020-01-24-230457_801x917_scrot.png) --- I also tried, with the same files, on 2.79 (the last build) and I couldn't reproduce the problem.

This issue was referenced by 9c5b054206

This issue was referenced by 9c5b0542069bfec5ba8bfa65fa031014d3750cbe

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Dalai Felinto self-assigned this 2020-04-10 12:49:14 +02:00

Hi, today I was playing again with stereo footage, and found out that the VSE no longer renders stereo strips and that we have to render to see the effect.

Was that the fix? I would've hoped to still be able to "Show Stereo" on the VSE preview, not only on rendered outputs.

Please see the attached image on which we can see my setup: a stereo image sequence that can be rendered into anaglyph (for example) but cannot be previewed as analglyph even when the camera or the image editor does show it.

2020-06-04-214815_1791x985_scrot.png

I'm using blender v2.83.0

Hi, today I was playing again with stereo footage, and found out that the VSE no longer renders stereo strips and that we have to render to see the effect. Was that the fix? I would've hoped to still be able to "Show Stereo" on the VSE preview, not only on rendered outputs. Please see the attached image on which we can see my setup: a stereo image sequence that can be rendered into anaglyph (for example) but cannot be previewed as analglyph even when the camera or the image editor does show it. ![2020-06-04-214815_1791x985_scrot.png](https://archive.blender.org/developer/F8577597/2020-06-04-214815_1791x985_scrot.png) I'm using blender v2.83.0

In #71546#945302, @GabrielMontagne wrote:
Hi, today I was playing again with stereo footage, and found out that the VSE no longer renders stereo strips and that we have to render to see the effect.

Was that the fix? I would've hoped to still be able to "Show Stereo" on the VSE preview, not only on rendered outputs.

Please see the attached image on which we can see my setup: a stereo image sequence that can be rendered into anaglyph (for example) but cannot be previewed as analglyph even when the camera or the image editor does show it.

2020-06-04-214815_1791x985_scrot.png

I'm using blender v2.83.0

I have recently tested stereo and also found out that it is not displayed in preview, but quite quickly forgot about it.

Can you please submit new bug report for this?

> In #71546#945302, @GabrielMontagne wrote: > Hi, today I was playing again with stereo footage, and found out that the VSE no longer renders stereo strips and that we have to render to see the effect. > > Was that the fix? I would've hoped to still be able to "Show Stereo" on the VSE preview, not only on rendered outputs. > > Please see the attached image on which we can see my setup: a stereo image sequence that can be rendered into anaglyph (for example) but cannot be previewed as analglyph even when the camera or the image editor does show it. > > ![2020-06-04-214815_1791x985_scrot.png](https://archive.blender.org/developer/F8577597/2020-06-04-214815_1791x985_scrot.png) > > I'm using blender v2.83.0 I have recently tested stereo and also found out that it is not displayed in preview, but quite quickly forgot about it. Can you please submit new bug report for this?

@GabrielMontagne the lack of stereo preview is a different matter altogether. A bug (probably reported? Not sure).

@GabrielMontagne the lack of stereo preview is a different matter altogether. A bug (probably reported? Not sure).

Thanks, @dfelinto @iss, for checking this out.
I couldn't find a report for this so I've added my own,

https://developer.blender.org/T77564

HTH.

Thanks, @dfelinto @iss, for checking this out. I couldn't find a report for this so I've added my own, https://developer.blender.org/T77564 HTH.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#71546
No description provided.