Fix T71546: VSE stereoscopic strips issues with mismatched dimensions

The issue is that the cachiing was adding the right view without the
proper pre-processed buffer.

D7389